# wccomps-bot

./: .dockerignore  .env.example  .env.test.example  .gitignore  .rsyncignore  ADDITIONAL_PROPERTY_TEST_OPPORTUNITIES.md  ARCHITECTURE.md  CLAUDE.md  CRITICAL_TEST_ANALYSIS.md  Dockerfile  Dockerfile.bot  Dockerfile.web  FINAL_TEST_EVALUATION.md  HTMX_MIGRATION_PLAN.md  PROPERTY_BASED_TESTS_EXPLAINED.md  PROPERTY_BASED_TEST_CRITIQUE.md  PROPERTY_TESTS_COMPLETE.md  README.md  SECURITY_ANALYSIS.md  TESTING_COMPLETION_REPORT.md  TESTING_STRATEGY.md  TESTS_READY_TO_RUN.md  TEST_ANALYSIS.md  TEST_COVERAGE_UPDATE.md  TEST_FIXES_COMPLETE.md  TEST_RUN_RESULTS.md  TEST_SUMMARY.md  THREAT_MODEL_ANALYSIS.md  USEFUL_TESTS_ANALYSIS.md  VALIDATION_STATUS.md  conftest.py  demonstrate_property_tests_finding_bugs.py  deploy.sh  docker-compose.test.yml  docker-compose.yml  find_raw_html.py  main.py  mutmut_config.py  mypy.ini  pyproject.toml  (+6 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: __init__.py  authentik_manager.py  authentik_utils.py  competition_actions.py  competition_timer.py  discord_manager.py  discord_queue.py  helper_role_timer.py  model_helpers.py  permissions.py  pytest.ini  role_sync.py  thread_creator.py  ticket_dashboard.py  unified_dashboard.py  utils.py
bot/cogs/: admin.py  admin_competition.py  admin_helpers.py  admin_linking.py  admin_teams.py  admin_tickets.py  help_panels.py  inject_grading.py  linking.py  orange_team.py  quotient_sync.py  scoring.py  ticketing.py
bot/tests/: README.md  __init__.py  conftest.py  test_admin_commands.py  test_admin_destructive_operations.py  test_authentik_manager.py  test_command_registration.py  test_competition_actions.py  test_competition_timer.py  test_concurrent_operations.py  test_discord_id_properties.py  test_discord_manager.py  test_discord_queue.py  test_end_competition.py  test_group_roles.py  test_inject_grading_cog.py  test_linking.py  test_model_helpers.py  test_oauth_linking.py  test_orange_team_cog.py  test_permissions.py  test_property_based.py  test_real_race_conditions.py  test_role_sync.py  test_team_number_properties.py  test_ticket_category_properties.py  test_ticket_creation.py  test_ticket_dashboard.py  test_ticket_workflows.py  test_ticketing_cog.py  test_unified_dashboard.py  test_user_commands.py  test_utils.py
db/: init.sql
docs/: ARCHITECTURE.md  README.md  api.md  tasks.md  testing-plan.md  ui-design-system.md  user-roles-and-stories.md
docs/plans/: 2026-02-21-scorecard-layout-design.md  2026-02-23-integration-tests-design.md  2026-02-23-scorecard-enhancements-design.md  2026-02-23-scorecard-enhancements-plan.md  2026-03-07-browser-role-testing-design.md  2026-03-07-browser-role-testing.md
docs/superpowers/plans/: 2026-03-10-ticket-detail-improvements.md  2026-03-11-review-pages-homogeneity.md
docs/superpowers/specs/: 2026-03-10-ticket-detail-improvements-design.md  2026-03-11-review-pages-homogeneity-design.md
scripts/: run-integration-tests.sh
web/: check_template_urls.py  conftest.py  entrypoint.sh  manage.py
web/browser_tests/: conftest.py  page_registry.py  test_console_errors.py  test_denied_roles.py  test_role_ux.py
web/challenges/: admin.py  apps.py  models.py  services.py  urls.py  views.py
web/challenges/migrations/: 0001_initial.py  0002_orangecheck_orangecheckcriterion.py  0003_orangeassignment_orangeassignmentresult_and_more.py  0004_orangefollowup.py
web/challenges/tests/: test_checkin.py  test_checks.py  test_followups.py  test_lead.py  test_models.py  test_permissions.py  test_scoring.py  test_views.py
web/competition/: admin.py  models.py
web/competition/migrations/: 0001_initial.py  (+6 more)
web/core/: admin.py  admin_mixins.py  admin_views.py  apps.py  auth_utils.py  authentik.py  authentik_manager.py  authentik_utils.py  competition_utils.py  context_processors.py  discord_logging.py  email.py  middleware.py  models.py  oauth.py  permission_constants.py  signals.py  tests.py  tickets_config.py  utils.py  views.py
web/integration_tests/: README.md  __init__.py  conftest.py  test_comprehensive.py  test_critical_api.py  test_critical_browser.py  test_critical_browser_skip.txt  test_e2e_discord_sync.py  test_e2e_group_roles.py  test_e2e_ops_dashboard.py  test_e2e_school_info.py  test_e2e_team_dashboard.py  test_e2e_ticket_lifecycle.py  test_load.py  test_security_authentication.py  test_security_authorization.py  test_security_file_upload.py  test_security_input_validation.py
web/packets/: admin.py  apps.py  models.py  services.py  urls.py  urls_admin.py  urls_team.py  views.py
web/person/: admin.py  apps.py  models.py
web/quotient/: apps.py  authentik_tokens.py  client.py
web/registration/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
web/scoring/: admin.py  calculator.py  deduplication.py  export.py  forms.py  models.py  pdf.py  quotient_sync.py  services.py  test_approval_fields.py  test_bulk_approve_red_findings.py  test_inject_approval.py  test_orange_approval.py  test_orange_approval_workflow.py  test_orange_portal_permissions.py  test_red_team_filters.py  test_score_value_component.py  tests.py  urls.py  views.py
web/staticfiles/: staticfiles.json
web/team/: admin.py  apps.py  forms.py  models.py
web/templates/: 404.html  500.html  base.html  create_ticket.html  error.html  link_error.html  link_success.html  ops_group_role_mappings.html  ops_review_tickets.html  ops_school_info.html  ops_school_info_edit.html  ops_school_info_import.html  ops_ticket_detail.html  ops_ticket_detail_dynamic.html  ops_ticket_list.html  school_info.html  school_info_clear.html  school_info_edit.html  school_info_import.html  team_tickets.html  test_detail_grid_basic.html  test_detail_grid_complex_html.html  test_detail_grid_custom_gap.html  test_detail_grid_empty.html  test_detail_grid_left_only.html  test_detail_grid_right_only.html  ticket_detail.html  ticket_list.html  tickets_error.html
web/ticketing/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
web/wccomps/: asgi.py  settings.py  urls.py  wsgi.py
(+358 files in other folders)
