[project]
name = "wccomps-bot"
version = "1.0.0"
description = "Discord bot and web interface for WCComps team management"
requires-python = ">=3.11"
dependencies = [
    # Discord bot
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.1",
    # Django web app
    "django>=5.1.14,<5.3",
    "django-cotton>=0.9",
    "django-stubs>=5.1.1",
    "pyjwt>=2.8.0",
    "gunicorn>=21.2",
    "whitenoise>=6.6",
    "pillow>=10.0.0",
    # Authentik integration
    "authlib>=1.3.1",
    "authentik-client>=2024.12.1",
    # Shared dependencies
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "aiohttp>=3.9",
    "xkcdpass>=1.19.9",
    "django-smart-ratelimit>=0.8.11",
    "httpx>=0.28.1",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "web"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-asyncio>=0.21",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "hypothesis[django]>=6.100",
    "mypy>=1.13",
    "types-requests>=2.32",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
mypy_path = "web"
files = ["bot", "web/core", "web/team", "web/ticketing", "web/person", "web/competition", "web/quotient", "web/wccomps", "web/scoring", "web/packets", "web/registration"]
exclude = "(/tests/|/test_|tests\\.py|integration_tests/|conftest\\.py)"

# Strict type checking
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_no_return = true
warn_return_any = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true
disallow_any_unimported = false
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
strict_equality = true
extra_checks = true

# Output
show_error_codes = true
pretty = true
color_output = true

# Performance
incremental = true
cache_dir = ".mypy_cache"

# Imports
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "xkcdpass.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "allauth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psycopg2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "django_smart_ratelimit"
follow_imports = "normal"
no_implicit_reexport = false

[tool.django-stubs]
django_settings_module = "wccomps.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wccomps.settings"
pythonpath = ["web"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["bot/tests", "web/core/tests", "web/integration_tests"]
addopts = ["-v", "--tb=short"]
markers = [
    "critical: Critical tests that must pass on every deployment",
    "integration: Integration tests with real database and APIs",
    "browser: Browser-based UI tests using Playwright",
    "load: Load and stress tests for concurrency and performance",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names, etc.)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common mistakes)
    "C4",     # flake8-comprehensions (better list/dict comprehensions)
    "PIE",    # flake8-pie (misc lints)
    "SIM",    # flake8-simplify (simplification suggestions)
    "T10",    # flake8-debugger (no forgotten breakpoints)
    "N",      # pep8-naming (naming conventions)
    "Q",      # flake8-quotes (consistent quotes)
    "S",      # flake8-bandit (security issues)
    "ASYNC",  # flake8-async (async/await correctness)
    "DTZ",    # flake8-datetimez (timezone awareness)
    "ERA",    # eradicate (no commented-out code)
    "PTH",    # flake8-use-pathlib (use pathlib)
    "PERF",   # performance improvements
]
ignore = [
    "E402",    # module level import not at top (django.setup pattern)
    "DTZ007",  # strptime without %z (we parse naive then add timezone)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106", "S110", "S311"]
"**/test_*.py" = ["S101", "S105", "S106", "S110", "S311"]
"**/tests.py" = ["S101", "S105", "S106", "S110", "S311"]
"**/conftest.py" = ["S101", "S105", "S106", "S110", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["bot", "web", "core", "team", "person", "ticketing", "competition"]

